--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,19 @@
 <body class="mt-40">
     {% include "navbar.html" %}
 
+    <div class="flex flex-col justify-center items-center">
+
+        <div class="flex flex-row justify-between items-center w-full mt-10" style="max-width: 76em;">
+            <div class="flex flex-col justify-start items-center" style="max-width: 30em;">
+                <p class="font-bold text-4xl text-center">Watch Us Teach the World of Engineering to the World.</p>
+            </div>
+            <div class="flex flex-col justify-start items-center mr-32">
+                <p>HELO!</p>
+            </div>
+        </div>
+
+    </div>
+
     <script type="text/javascript">
 
         const menuBtn = document.querySelector(".menu-btn");
