--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
                 <p class="font-bold text-4xl text-center">Watch Us Teach the World of Engineering to the World.</p>
             </div>
             <div class="flex flex-col justify-start items-center mr-32">
-                <p>HELO!</p>
+                <img src="../static/img/heroimg.png" alt="" style="max-width: 400px;">
             </div>
         </div>
 
