--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
         <div class="max-w-7xl mx-auto">
             <div class="flex flex-col lg:flex-row justify-center items-center">
                 <div class="mb-5 flex flex-col">
-                    <img src="../static/img/bimctlogo.png" style="max-width: 340px;" alt="">
+                    <a class="brand" href="/">ENJAID </a>
                     <p class="text-gray-500">
                         All Rights Reserved
                     </p>
