--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,16 @@
 
     <div class="flex flex-col justify-center items-center">
 
-        <div class="flex flex-row justify-between items-center w-full mt-10" style="max-width: 76em;">
-            <div class="flex flex-col justify-start items-center" style="max-width: 30em;">
-                <p class="font-bold text-4xl text-center">Watch Us Teach the World of Engineering to the World.</p>
+        <div class="flex flex-col-reverse lg:flex-row justify-between items-center w-full mt-10" style="max-width: 76em;">
+            <div class="flex flex-col justify-start items-center mb-10" style="max-width: 30em;">
+                <p class="font-bold text-4xl text-center mb-4">Watch Us Teach the World of Engineering to the World.</p>
+                <p>Help us with our mission to teach engineering to the world.</p>
+
+                <div></div>
             </div>
-            <div class="flex flex-col justify-start items-center mr-32">
-                <img src="../static/img/heroimg.png" alt="" style="max-width: 400px;">
+
+            <div class="flex flex-col justify-center items-center lg:mr-32 mb-10">
+                <img src="../static/img/heroimg.png" alt="" style="max-width: 500px;">
             </div>
         </div>
 
