--- a/templates/index.html
+++ b/templates/index.html
@@ -7,17 +7,27 @@
 
     <div class="flex flex-col justify-center items-center">
 
-        <div class="flex flex-col-reverse lg:flex-row justify-between items-center w-full mt-10" style="max-width: 76em;">
-            <div class="flex flex-col justify-start items-center mb-10" style="max-width: 30em;">
+        <div class="flex flex-col-reverse lg:flex-row justify-between items-center w-full mt-10"
+            style="max-width: 76em;">
+            <div class="flex flex-col justify-start items-center mb-10" style="max-width: 40em;">
                 <p class="font-bold text-4xl text-center mb-4">Watch Us Teach the World of Engineering to the World.</p>
-                <p>Help us with our mission to teach engineering to the world.</p>
+                <p class="mb-6 text-xl">Help us with our mission to teach engineering to the world.</p>
 
-                <div></div>
+                <div class="flex flex=row justify-center items-center">
+                    <button class="home-button text-xs">Mentors</button>
+                    <button class="home-button text-xs">Mission</button>
+                    <button class="home-button text-xs">Curriculum</button>
+                </div>
             </div>
 
-            <div class="flex flex-col justify-center items-center lg:mr-32 mb-10">
-                <img src="../static/img/heroimg.png" alt="" style="max-width: 500px;">
+            <div class="flex flex-col justify-center items-center lg:mr-48 mb-10">
+                <img src="../static/img/heroimg.png" alt="" style="max-width: 300px;" class="rounded">
             </div>
+
+        </div>
+
+        <div class="flex flex-row  ">
+
         </div>
 
     </div>
