--- a/templates/index.html
+++ b/templates/index.html
@@ -7,27 +7,32 @@
 
     <div class="flex flex-col justify-center items-center">
 
-        <div class="flex flex-col-reverse lg:flex-row justify-between items-center w-full mt-10"
-            style="max-width: 76em;">
+        <div class="flex flex-col-reverse lg:flex-row justify-between items-center w-full mt-10 mb-10"
+            style="max-width: 84em;">
             <div class="flex flex-col justify-start items-center mb-10" style="max-width: 40em;">
                 <p class="font-bold text-4xl text-center mb-4">Watch Us Teach the World of Engineering to the World.</p>
-                <p class="mb-6 text-xl">Help us with our mission to teach engineering to the world.</p>
+                <p class="mb-6 text-xl text-center">Help us with our mission to teach engineering to the world.</p>
 
                 <div class="flex flex=row justify-center items-center">
-                    <button class="home-button text-xs">Mentors</button>
-                    <button class="home-button text-xs">Mission</button>
-                    <button class="home-button text-xs">Curriculum</button>
+                    <button class="home-button text-sm">Mentors</button>
+                    <button class="home-button text-sm">Mission</button>
+                    <button class="home-button text-sm">Curriculum</button>
                 </div>
             </div>
 
-            <div class="flex flex-col justify-center items-center lg:mr-48 mb-10">
+            <div class="flex flex-col justify-center items-center lg:mr-48 mb-10 lg:ml-10">
                 <img src="../static/img/heroimg.png" alt="" style="max-width: 300px;" class="rounded">
             </div>
 
         </div>
 
-        <div class="flex flex-row  ">
-
+        <div class="flex flex-col justify-center items-center w-full" style="background-color: #EDF3F0;">
+            <p class="mt-10 mb-4 text-3xl font-bold text-center">We show you the important steps.</p>
+            <p class="text-lg text-center mb-10" style="max-width: 35em;">Look at our quality tutorials on various engineering principles and mechanisms. Anything from simple tools to complex code, we have it all.</p>
+            <div class="flex flex-row justify-center items-center w-1/2">
+                <iframe class="mb-10" width="520" height="300" src="https://www.youtube.com/embed/tvGTI3UfYHU">
+                </iframe>
+            </div>
         </div>
 
     </div>
