--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
         </div>
     </div> -->
 
-    <div class="w-full flex flex-row justify-between items-center" style="max-width: 80em;">
+    <div class="w-full flex flex-row justify-between items-center pl-14" style="max-width: 80em;">
         <a class="brand ml-10" href="/">ENJAID </a>
 
         <div class="menu-btn"></div>
@@ -17,7 +17,7 @@
                 <a href="/episodes">Programs</a>
                 <a href="/review">Branches</a>
                 <a href="/" class="mr-10">Resources</a>
-                <button>Contact Us</button>
+                <button class="ml-10 home-button">Contact Us</button>
             </div>
         </div>
     </div>
