--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=s, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/output.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/landing.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" />
     <title> {{page}} </title>
 </head>
 {% block main %}
