--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,17 +5,16 @@
         </div>
     </div> -->
 
-    <div class="w-full flex flex-row justify-between items-center pl-14" style="max-width: 80em;">
+    <div class="w-full flex flex-row justify-between items-center pl-24" style="max-width: 80em;">
         <a class="brand ml-10" href="/">ENJAID </a>
 
         <div class="menu-btn"></div>
 
         <div class="navigation mt-10">
-            <div  class="navigation-items mt-10">
+            <div class="navigation-items mt-10">
                 <a href="/">Home</a>
-                <a href="/about">About</a>
-                <a href="/episodes">Programs</a>
-                <a href="/review">Branches</a>
+                <a href="/programs">Programs</a>
+                <a href="/about">Branches</a>
                 <a href="/" class="mr-10">Resources</a>
                 <button class="ml-10 home-button">Contact Us</button>
             </div>
