--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,8 +10,8 @@
 
         <div class="menu-btn"></div>
 
-        <div class="navigation mt-10">
-            <div class="navigation-items mt-10">
+        <div class="navigation mt-10" style="overflow-y: hidden;">
+            <div class="navigation-items mt-10" style="overflow-y: hidden;">
                 <a href="/">Home</a>
                 <a href="/programs">Programs</a>
                 <a href="/about">Branches</a>
