--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
     <div class="flex flex-col justify-center items-center">
 
-        <div class="flex flex-col-reverse lg:flex-row justify-between items-center w-full mt-10 mb-10 lg:pl-24"
+        <div class="flex flex-col-reverse lg:flex-row justify-center items-center w-full mt-10 mb-10 lg:pl-24"
             style="max-width: 84em;">
             <div class="flex flex-col justify-start items-center mb-10" style="max-width: 40em;">
                 <p class="font-bold text-4xl text-center mb-2 pb-2">Watch Us Teach the World of Engineering to the
@@ -23,7 +23,7 @@
             </div>
 
             <div class="flex flex-col justify-center items-center lg:mr-48 mb-10 lg:ml-10">
-                <img src="../static/img/heroimg.png" alt="" style="max-width: 300px;" class="rounded">
+                <img src="../static/img/heroimg.png" alt="" style="max-width: 300px;" class="w-full" class="rounded">
             </div>
 
         </div>
@@ -73,7 +73,7 @@
                         principles you need to pursue your engineering goals.
                     </p>
 
-                    <button class="home-button">More Videos</button>
+                    <button class="home-button">More Editorials</button>
                 </div>
             </div>
         </div>
