--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,21 +32,17 @@
                             <li class="pb-4"> <i class="fa fa-chevron-right text-yellow-500"></i> <a href="/mission"
                                     class="hover:text-yellow-500">Mission</a></li>
                             <li class="pb-4"> <i class="fa fa-chevron-right text-yellow-500"></i> <a href="/people"
-                                    class="hover:text-yellow-500">People</a></li>
+                                    class="hover:text-yellow-500">Branches</a></li>
                         </ul>
                     </div>
 
                     <div class="mb-5 flex flex-col mt-8 justify-center items-center" style="width: 340px;">
-                        <h4 class="pb-4 mt-4 font-bold">Our Competition</h4>
+                        <h4 class="pb-4 mt-4 font-bold">Our Work</h4>
                         <ul class="text-gray-500">
                             <li class="pb-4"> <i class="fa fa-chevron-right text-yellow-500"></i> <a href="/format"
-                                    class="hover:text-yellow-500">Format</a></li>
+                                    class="hover:text-yellow-500">Resources</a></li>
                             <li class="pb-4"> <i class="fa fa-chevron-right text-yellow-500"></i> <a href="/current"
-                                    class="hover:text-yellow-500">BIMCT Fall 2022</a></li>
-                            <li class="pb-4"> <i class="fa fa-chevron-right text-yellow-500"></i> <a href="/archive"
-                                    class="hover:text-yellow-500">Archive</a></li>
-                            <li class="pb-4"> <i class="fa fa-chevron-right text-yellow-500"></i> <a href="/signup"
-                                    class="hover:text-yellow-500">Sign Up</a></li>
+                                    class="hover:text-yellow-500">Programs</a></li>
                         </ul>
                     </div>
 
