--- a/templates/programs.html
+++ b/templates/programs.html
@@ -7,10 +7,39 @@
     {% include "navbar.html" %}
 
     <div class="flex flex-col justify-center items-center ">
-        <div class="flex flex-row justify-start items-center w-3/4">
-            <p class="text-4xl w-1/2 font-bold text-center mr-12">Join Our Programs to Learn.</p>
-            <img src="../static/img/teaching.JPG" class="w-1/6" style="border: 2px solid black;" alt="">
-            <img src="../static/img/teaching2.JPG" class="w-1/6" style="border: 2px solid black;" alt="">
+        <div class="flex flex-col sm:flex-row justify-start items-center w-3/4 mb-20">
+            <p class="text-4xl w-1/2 font-bold text-center sm:mr-12 mb-12 sm:mb-0" style="overflow-y: hidden;">Join Our Programs to Learn.</p>
+            <img src="../static/img/teaching.JPG" class="mb-12 sm:mb-0" style="border: 2px solid black; width:250px;" alt="">
+            <img src="../static/img/teaching2.JPG" style="border: 2px solid black; width:250px;" alt="">
+        </div>
+
+
+        <div class="flex flex-col justify-center items-center w-full mb-20" style="background-color: #EDF3F0;">
+            <p class="text-4xl mb-14 mt-4" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">What We Offer</p>
+            <div class="flex flex-col lg:flex-row justify-center items-center w-1/2 mb-20">
+                <div class="flex flex-col justify-center items-center lg:mr-10 mb-4">
+                    <p class="text-3xl font-bold text-center mb-10 underline" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif" >Robotics Mentorship</p>
+                    <p class="text-center mb-4" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; max-width: 400px;">Sign up to become a student in our mentorship program. We cater to dozens of students around the country so join to learn and creatre your own robots. </p>
+                    <button class="home-button" style="width: 150px;">Sign Up</button>
+                </div>
+
+                <img src="../static/img/robotics.jpg" style="width: 330px; border: 1px solid black;" alt="">
+            </div>
+
+            <div class="flex flex-col-reverse lg:flex-row justify-center items-center w-1/2 mb-10">
+
+                <img src="../static/img/robotics.jpg" style="width: 330px; border: 1px solid black;" alt="">
+
+
+                <div class="flex flex-col justify-center items-center lg:ml-10 mb-4">
+                    <p class="text-3xl font-bold text-center mb-10 underline" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif" >Teacher Fellowship</p>
+                    <p class="text-center mb-4" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; max-width: 400px;">Sign up to become one of our teachers in our program and teach students from all around the country. We connect students so you don't have to.</p>
+                    <button class="home-button" style="width: 150px;">Sign Up</button>
+                </div>
+
+            </div>
+
+            
         </div>
 
     </div>
