--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,7 +16,7 @@
                 <a href="/programs">Programs</a>
                 <a href="/about">Branches</a>
                 <a href="/" class="mr-10">Resources</a>
-                <button class="ml-10 home-button">Contact Us</button>
+                <a><button class="ml-10 home-button">Contact Us</button></a>
             </div>
         </div>
     </div>
