--- a/templates/programs.html
+++ b/templates/programs.html
@@ -7,15 +7,15 @@
     {% include "navbar.html" %}
 
     <div class="flex flex-col justify-center items-center ">
-        <div class="flex flex-col sm:flex-row justify-start items-center w-3/4 mb-20">
-            <p class="text-4xl w-1/2 font-bold text-center sm:mr-12 mb-12 sm:mb-0" style="overflow-y: hidden;">Join Our Programs to Learn.</p>
+        <div class="flex flex-col sm:flex-row justify-center  items-center w-3/4 mb-20">
+            <p class="text-4xl w-1/2 font-bold text-center sm:mr-12 mb-12 sm:mb-0 " style="overflow-y: hidden; max-width: 500px;">Join Our Programs to Learn the Right Way.</p>
             <img src="../static/img/teaching.JPG" class="mb-12 sm:mb-0" style="border: 2px solid black; width:250px;" alt="">
             <img src="../static/img/teaching2.JPG" style="border: 2px solid black; width:250px;" alt="">
         </div>
 
 
         <div class="flex flex-col justify-center items-center w-full mb-20" style="background-color: #EDF3F0;">
-            <p class="text-4xl mb-14 mt-4" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">What We Offer</p>
+            <p class="text-5xl mb-14 mt-8 underline" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">What We Offer</p>
             <div class="flex flex-col lg:flex-row justify-center items-center w-1/2 mb-20">
                 <div class="flex flex-col justify-center items-center lg:mr-10 mb-4">
                     <p class="text-3xl font-bold text-center mb-10 underline" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif" >Robotics Mentorship</p>
@@ -26,9 +26,9 @@
                 <img src="../static/img/robotics.jpg" style="width: 330px; border: 1px solid black;" alt="">
             </div>
 
-            <div class="flex flex-col-reverse lg:flex-row justify-center items-center w-1/2 mb-10">
+            <div class="flex flex-col-reverse lg:flex-row justify-center items-center w-1/2 mb-20">
 
-                <img src="../static/img/robotics.jpg" style="width: 330px; border: 1px solid black;" alt="">
+                <img src="../static/img/teacher.jpg" style="width: 330px; border: 1px solid black;" alt="">
 
 
                 <div class="flex flex-col justify-center items-center lg:ml-10 mb-4">
@@ -39,8 +39,34 @@
 
             </div>
 
+            <div class="flex flex-col lg:flex-row justify-center items-center w-1/2 mb-20">
+                <div class="flex flex-col justify-center items-center lg:mr-10 mb-4">
+                    <p class="text-3xl font-bold text-center mb-10 underline" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif" >Editorial Writer</p>
+                    <p class="text-center mb-4" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; max-width: 400px;">Sign up to write engineering editorials and materials to help students around the country utilize the resources necessary to understand engineering principles. </p>
+                    <button class="home-button" style="width: 150px;">Sign Up</button>
+                </div>
+
+                <img src="../static/img/writer.jpg" style="width: 330px; border: 1px solid black;" alt="">
+            </div>
             
         </div>
+
+        <div class="flex flex-col justify-center items-center">
+            <p class="text-5xl font-bold underline mb-10" style="overflow-y: hidden;">How We Have Helped</p>
+            <div class="flex flex-row justify-center items-center">
+                <img src="../static/img/helping/img1.jpg" style="max-height: 400px;" alt="">
+                <img src="../static/img/helping/img2.jpg" style="max-height: 400px;" lt="">
+            </div>
+            <div class="flex flex-row justify-center items-center">
+                <img src="../static/img/helping/img3.jpg" style="max-height: 400px;" alt="">
+                <img src="../static/img/helping/img4.jpg" style="max-height: 400px;" lt="">
+            </div>
+            <div class="flex flex-row justify-center items-center">
+                <img src="../static/img/helping/img5.jpg" style="max-height: 400px;" alt="">
+                <img src="../static/img/helping/img6.jpg" style="max-height: 400px;" lt="">
+            </div>
+        </div>
+
 
     </div>
 
