--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,19 +29,17 @@
                         <ul class="text-gray-500">
                             <li class="pb-4"> <i class="fa fa-chevron-right text-yellow-500"></i> <a href="/"
                                     class="hover:text-yellow-500">Home</a></li>
-                            <li class="pb-4"> <i class="fa fa-chevron-right text-yellow-500"></i> <a href="/mission"
-                                    class="hover:text-yellow-500">Mission</a></li>
-                            <li class="pb-4"> <i class="fa fa-chevron-right text-yellow-500"></i> <a href="/people"
+                            <li class="pb-4"> <i class="fa fa-chevron-right text-yellow-500"></i> <a href="/branches"
                                     class="hover:text-yellow-500">Branches</a></li>
                         </ul>
                     </div>
 
-                    <div class="mb-5 flex flex-col mt-8 justify-center items-center" style="width: 340px;">
+                    <div class="mb-5 flex flex-col justify-center items-center" style="width: 340px;">
                         <h4 class="pb-4 mt-4 font-bold">Our Work</h4>
                         <ul class="text-gray-500">
-                            <li class="pb-4"> <i class="fa fa-chevron-right text-yellow-500"></i> <a href="/format"
+                            <li class="pb-4"> <i class="fa fa-chevron-right text-yellow-500"></i> <a href="/resources"
                                     class="hover:text-yellow-500">Resources</a></li>
-                            <li class="pb-4"> <i class="fa fa-chevron-right text-yellow-500"></i> <a href="/current"
+                            <li class="pb-4"> <i class="fa fa-chevron-right text-yellow-500"></i> <a href="/programs"
                                     class="hover:text-yellow-500">Programs</a></li>
                         </ul>
                     </div>
