--- a/templates/branches.html
+++ b/templates/branches.html
@@ -7,7 +7,7 @@
     {% include "navbar.html" %}
 
     <div class="flex flex-col justify-center items-center">
-            <p class="text-6xl font-bold underline mb-14" style="overflow-y: hidden;">Our Growing Team</p>
+            <p class="text-6xl font-bold underline mb-14 text-center" style="overflow-y: hidden;">Our Growing Team</p>
 
             <div class="flex flex-col justify-center items-center mb-14">
                 <p class="text4xl font-bold underline">Admin Team</p>
