--- a/templates/programs.html
+++ b/templates/programs.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="flex flex-col justify-center items-center">
-            <p class="text-5xl font-bold underline mb-10" style="overflow-y: hidden;">How We Have Helped</p>
+            <p class="text-5xl font-bold underline mb-10 text-center" style="overflow-y: hidden;">How We Have Helped</p>
             <div class="flex flex-row justify-center items-center">
                 <img src="../static/img/helping/img1.jpg" style="max-height: 400px;" alt="">
                 <img src="../static/img/helping/img2.jpg" style="max-height: 400px;" lt="">
