--- a/templates/resources.html
+++ b/templates/resources.html
@@ -6,14 +6,14 @@
 <body class="mt-40 ">
     {% include "navbar.html" %}
 
-    <div class="flex flex-col justify-center items-center">
+    <div class="flex flex-col justify-center items-center w-full">
         
-        <div class="flex flex-col lg:flex-row justify-center items-center mb-24">
-            <div class="flex flex-col justify-center lg:justify-start items-start text-start mr-10" style="width: 400px;">
+        <div class="flex flex-col lg:flex-row justify-center items-center mb-24 w-full">
+            <div class="flex flex-col justify-center items-center text-center mr-10 w-1/4">
                 <p class="text-4xl mb-10 font-bold" style="font-family:'Nunito Sans', sans-serif;">Editorials</p>
                 <p style="font-family:'Nunito Sans', sans-serif;" class="mb-10">A collection of well-crafted and concise editorials to help you learn about the core engineering principles of robotics. Start by reading the fundamentals for any engineering discipline.</p>
             </div>
-            <img src="../static/img/writer2.jpg"  style="max-width: 500px;"alt="">
+            <img src="../static/img/writer2.jpg"  class="w-3/4" style="max-width: 500px;" alt="">
         </div>
 
         <div class="flex flex-col justify-center items-center w-full" style="background-color: #EDF3F0;">
