--- a/templates/resources.html
+++ b/templates/resources.html
@@ -9,9 +9,9 @@
     <div class="flex flex-col justify-center items-center w-full">
         
         <div class="flex flex-col lg:flex-row justify-center items-center mb-24 w-full">
-            <div class="flex flex-col justify-center items-center text-center mr-10 w-2/5">
+            <div class="flex flex-col justify-center items-center text-center lg:mr-10 w-2/5">
                 <p class="text-4xl mb-10 font-bold" style="font-family:'Nunito Sans', sans-serif;">Editorials</p>
-                <p style="font-family:'Nunito Sans', sans-serif;" class="mb-10">A collection of well-crafted and concise editorials to help you learn about the core engineering principles of robotics. Start by reading the fundamentals for any engineering discipline.</p>
+                <p style="font-family:'Nunito Sans', sans-serif;" class="mb-10 w-2/3">A collection of well-crafted and concise editorials to help you learn about the core engineering principles of robotics. Start by reading the fundamentals for any engineering discipline.</p>
             </div>
             <img src="../static/img/writer2.jpg"  class="w-3/4" style="max-width: 500px;" alt="">
         </div>
