--- a/templates/index.html
+++ b/templates/index.html
@@ -33,25 +33,31 @@
             <div class="wrapper my-10">
                 <div class="flex flex-col justify-center items-center container">
                     <i class="fas fa-smile-beam test"></i>
-                    <span class="num" data-val="100">000</span>
+                    <div class="flex flex-row justify-center items-center">
+                        <span class="num" data-val="100">000</span>
+                        <span class="text-white text-3xl font-bold ml-4">+</span>
+                    </div>
                     <span class="text">Students Helped</span>
                 </div>
                 <div class="container">
                     <i class="fas fa-clock test"></i>
-                    <span class="num" data-val="681">000</span>
+                    <div class="flex flex-row justify-center items-center">
+                        <span class="num" data-val="600">000</span>
+                        <span class="text-white text-3xl font-bold ml-4">+</span>
+                    </div>
                     <span class="text">Hours Taught</span>
                 </div>
                 <div class="container">
                     <i class="fas fa-list test"></i>
                     <div class="flex flex-row justify-center items-center">
-                        <span class="num" data-val="109">000</span>
-                        <span class="text-white text-3xl font-bold ml-4">K</span>
+                        <span class="num" data-val="18">000</span>
+                        <span class="text-white text-3xl font-bold ml-4">+</span>
                     </div>
-                    <span class="text">Total Editorials</span>
+                    <span class="text">Total Branches</span>
                 </div>
                 <div class="container">
                     <i class="fas fa-user test"></i>
-                    <span class="num" data-val="124">000</span>
+                    <span class="num" data-val="25">000</span>
                     <span class="text">Team Size</span>
                 </div>
             </div>
