--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                 <div class="flex flex-col justify-center items-center container">
                     <i class="fas fa-smile-beam test"></i>
                     <div class="flex flex-row justify-center items-center">
-                        <span class="num" data-val="100">000</span>
+                        <span class="num" data-val="200">000</span>
                         <span class="text-white text-3xl font-bold ml-4">+</span>
                     </div>
                     <span class="text">Students Helped</span>
@@ -42,7 +42,7 @@
                 <div class="container">
                     <i class="fas fa-clock test"></i>
                     <div class="flex flex-row justify-center items-center">
-                        <span class="num" data-val="600">000</span>
+                        <span class="num" data-val="900">000</span>
                         <span class="text-white text-3xl font-bold ml-4">+</span>
                     </div>
                     <span class="text">Hours Taught</span>
@@ -69,7 +69,7 @@
                 engineering principles and mechanisms. Anything from simple tools to complex code, we have it all.</p>
             <div class="flex flex-col lg:flex-row justify-center items-center w-5/6">
                 <iframe class="mb-10 w-2/3 lg:w-1/2 lg:mr-10" style="max-width: 30em;" height="300"
-                    src="https://www.youtube.com/embed/tvGTI3UfYHU">
+                    src="https://www.youtube.com/embed/btGYcizV0iI">
                 </iframe>
 
                 <div class="flex flex-col justify-start items-center" style="height: 20em;">
