--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
             <section class="relative mb-10">
                 <div class="flex flex-col md:flex-row justify-center items-center">
 
-                    <a href="https://www.google.com" class="sm:mr-10">
+                    <a href="https://forms.gle/1UtLTWJS5UxQEcUb8 class="sm:mr-10">
                         <div class="max-w-xs rounded overflow-hidden shadow-lg mb-10 card"
                             style="background-color: white; height: 28em;"">
                             <img class=" w-full" src="../static/img/mentor.jpg" alt="Sunset in the mountains">
@@ -108,7 +108,7 @@
                         </div>
                     </a>
 
-                    <a href="https://www.google.com" class="sm:mr-10">
+                    <a href="https://forms.gle/JmFsKnkMynZJXKxcA" class="sm:mr-10">
                         <div class="max-w-xs rounded overflow-hidden shadow-lg mb-10 card h-full"
                             style="background-color: white; height: 28em;"">
                             <img class=" w-full" src="../static/img/learn.jpg" alt="Sunset in the mountains">
@@ -124,7 +124,7 @@
                         </div>
                     </a>
 
-                    <a href="https://www.google.com" class="sm:mr-10">
+                    <a href="/resources" class="sm:mr-10">
                         <div class="max-w-xs rounded overflow-hidden shadow-lg mb-10 card h-full"
                             style="background-color: white; height: 28em;">
                             <img class="w-full" src="../static/img/read.jpg" alt="Sunset in the mountains">
