--- a/templates/resources.html
+++ b/templates/resources.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="flex flex-col justify-center items-center w-full" style="background-color: #EDF3F0;">
-            <p>TBD</p>
+            <p>UNDER MAINTENANCE</p>
         </div>
     </div>
 
