--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
             <section class="relative mb-10">
                 <div class="flex flex-col md:flex-row justify-center items-center">
 
-                    <a href="https://forms.gle/1UtLTWJS5UxQEcUb8 class="sm:mr-10">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfsbF7HP0Wy1HXNAbOj-hIA9em6AplRGreUq9cM_K7IaZtCeA/viewform?usp=sf_link" class="sm:mr-10">
                         <div class="max-w-xs rounded overflow-hidden shadow-lg mb-10 card"
                             style="background-color: white; height: 28em;"">
                             <img class=" w-full" src="../static/img/mentor.jpg" alt="Sunset in the mountains">
@@ -108,7 +108,7 @@
                         </div>
                     </a>
 
-                    <a href="https://forms.gle/JmFsKnkMynZJXKxcA" class="sm:mr-10">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSctLoHxtLASRUDH4o6JzHjUijMBQucoOt7GGD7XdzCWCpDUUQ/viewform?usp=sf_link" class="sm:mr-10">
                         <div class="max-w-xs rounded overflow-hidden shadow-lg mb-10 card h-full"
                             style="background-color: white; height: 28em;"">
                             <img class=" w-full" src="../static/img/learn.jpg" alt="Sunset in the mountains">
