--- a/templates/programs.html
+++ b/templates/programs.html
@@ -20,7 +20,7 @@
                 <div class="flex flex-col justify-center items-center lg:mr-10 mb-4">
                     <p class="text-3xl font-bold text-center mb-10 underline" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif" >Robotics Mentorship</p>
                     <p class="text-center mb-4" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; max-width: 400px;">Sign up to become a student in our mentorship program. We cater to dozens of students around the country so join to learn and creatre your own robots. </p>
-                    <button class="home-button" style="width: 150px;">Sign Up</button>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSctLoHxtLASRUDH4o6JzHjUijMBQucoOt7GGD7XdzCWCpDUUQ/viewform?usp=sf_link"><button class="home-button" style="width: 150px;">Sign Up</button></a>
                 </div>
 
                 <img src="../static/img/robotics.jpg" style="width: 330px; border: 1px solid black;" alt="">
@@ -34,7 +34,7 @@
                 <div class="flex flex-col justify-center items-center lg:ml-10 mb-4">
                     <p class="text-3xl font-bold text-center mb-10 underline" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif" >Teacher Fellowship</p>
                     <p class="text-center mb-4" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; max-width: 400px;">Sign up to become one of our teachers in our program and teach students from all around the country. We connect students so you don't have to.</p>
-                    <button class="home-button" style="width: 150px;">Sign Up</button>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfsbF7HP0Wy1HXNAbOj-hIA9em6AplRGreUq9cM_K7IaZtCeA/viewform?usp=sf_link"><button class="home-button" style="width: 150px;">Sign Up</button></a>
                 </div>
 
             </div>
@@ -43,7 +43,7 @@
                 <div class="flex flex-col justify-center items-center lg:mr-10 mb-4">
                     <p class="text-3xl font-bold text-center mb-10 underline" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif" >Editorial Writer</p>
                     <p class="text-center mb-4" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; max-width: 400px;">Sign up to write engineering editorials and materials to help students around the country utilize the resources necessary to understand engineering principles. </p>
-                    <button class="home-button" style="width: 150px;">Sign Up</button>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdYaDbnF_3fb3yDZ6gsGVi0YKM-VvyJTMb1Ctz89iI_N1VlGg/viewform?usp=sf_link"><button class="home-button" style="width: 150px;">Sign Up</button></a>
                 </div>
 
                 <img src="../static/img/writer.jpg" style="width: 330px; border: 1px solid black;" alt="">
