--- a/templates/branches.html
+++ b/templates/branches.html
@@ -270,7 +270,7 @@
 
 
 
-            <p class="text-5xl mt-24 mb-24 underline font-bold">International Branches</p>
+            <p class="text-5xl mt-24 mb-24 underline font-bold" style="overflow-y: hidden;">International Branches</p>
 
 
             <div class="flex flex-col justify-center items-center">
