--- a/templates/programs.html
+++ b/templates/programs.html
@@ -15,7 +15,7 @@
 
 
         <div class="flex flex-col justify-center items-center w-full mb-20" style="background-color: #EDF3F0;">
-            <p class="text-5xl mb-14 mt-8 underline" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">What We Offer</p>
+            <p class="text-5xl mb-14 mt-8 underline" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; overflow-y: hidden;">What We Offer</p>
             <div class="flex flex-col lg:flex-row justify-center items-center w-1/2 mb-20">
                 <div class="flex flex-col justify-center items-center lg:mr-10 mb-4">
                     <p class="text-3xl font-bold text-center mb-10 underline" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif" >Robotics Mentorship</p>
