--- a/templates/branches.html
+++ b/templates/branches.html
@@ -14,7 +14,7 @@
 
                 <div class="flex flex-wrap justify-center items-center">
                     <div class="flex flex-col max-w-sm rounded overflow-hidden shadow-lg mb-10 justify-start items-center mx-10" style="background-color: white;">
-                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/temp.png" alt="Sunset in the mountains">
+                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/timotea.png" alt="Sunset in the mountains">
                         <div class="px-6 py-4">
                             <div class="font-bold text-xl mb-2 text-center">Timothy Hu</div>
                             <p class="text-gray-700 text-center">
@@ -24,7 +24,7 @@
                     </div>
 
                     <div class="flex flex-col max-w-sm rounded overflow-hidden shadow-lg mb-10 justify-start items-center mx-10" style="background-color: white;">
-                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/temp.png" alt="Sunset in the mountains">
+                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/jiarong.png" alt="Sunset in the mountains">
                         <div class="px-6 py-4">
                             <div class="font-bold text-xl mb-2 text-center">Jiarong Zhang</div>
                             <p class="text-gray-700 text-center">
@@ -34,7 +34,7 @@
                     </div>
 
                     <div class="flex flex-col max-w-sm rounded overflow-hidden shadow-lg mb-10 justify-start items-center mx-10" style="background-color: white;">
-                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/temp.png" alt="Sunset in the mountains">
+                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/alex.png" alt="Sunset in the mountains">
                         <div class="px-6 py-4">
                             <div class="font-bold text-xl mb-2 text-center">Alex Chen</div>
                             <p class="text-gray-700 text-center">
@@ -141,6 +141,16 @@
                             <div class="font-bold text-xl mb-2 text-center">Ryan Rubin</div>
                             <p class="text-gray-700 text-center">
                                 New York Branch Lead
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="flex flex-col max-w-sm rounded overflow-hidden shadow-lg mb-10 justify-start items-center mx-10" style="background-color: white;">
+                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/temp.png" alt="Sunset in the mountains">
+                        <div class="px-6 py-4">
+                            <div class="font-bold text-xl mb-2 text-center">Gabe H.</div>
+                            <p class="text-gray-700 text-center">
+                                New York Branch Mentor
                             </p>
                         </div>
                     </div>
