--- a/templates/branches.html
+++ b/templates/branches.html
@@ -90,6 +90,36 @@
                         </div>
                     </div>
 
+                    <div class="flex flex-col max-w-sm rounded overflow-hidden shadow-lg mb-10 justify-start items-center mx-10" style="background-color: white;">
+                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/temp.png" alt="Sunset in the mountains">
+                        <div class="px-6 py-4">
+                            <div class="font-bold text-xl mb-2 text-center">Justin Luo</div>
+                            <p class="text-gray-700 text-center">
+                                California Branch Helper
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="flex flex-col max-w-sm rounded overflow-hidden shadow-lg mb-10 justify-start items-center mx-10" style="background-color: white;">
+                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/temp.png" alt="Sunset in the mountains">
+                        <div class="px-6 py-4">
+                            <div class="font-bold text-xl mb-2 text-center">Nicholas Wang</div>
+                            <p class="text-gray-700 text-center">
+                                California Branch Helper
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="flex flex-col max-w-sm rounded overflow-hidden shadow-lg mb-10 justify-start items-center mx-10" style="background-color: white;">
+                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/temp.png" alt="Sunset in the mountains">
+                        <div class="px-6 py-4">
+                            <div class="font-bold text-xl mb-2 text-center">Alexander G Truong</div>
+                            <p class="text-gray-700 text-center">
+                                California Branch Helper
+                            </p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
@@ -185,6 +215,18 @@
                             <div class="font-bold text-xl mb-2 text-center">Eric Wang</div>
                             <p class="text-gray-700 text-center">
                                 Massachusetts Branch Lead
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex flex-wrap justify-center items-center">
+                    <div class="flex flex-col max-w-sm rounded overflow-hidden shadow-lg mb-10 justify-start items-center mx-10" style="background-color: white;">
+                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/temp.png" alt="Sunset in the mountains">
+                        <div class="px-6 py-4">
+                            <div class="font-bold text-xl mb-2 text-center">Jason Guo</div>
+                            <p class="text-gray-700 text-center">
+                                Massachusetts Branch Helper
                             </p>
                         </div>
                     </div>
